# amateur_radio_propagation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  info.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements_test.txt
.github/workflows/: ci.yml  hacs.yml  hassfest.yml  python-checks.yml  release.yml  semantic-pr.yml
automations/: 10m_band_open.yml  6m_aurora_open.yml  6m_eskip_open.yml
custom_components/amateur_radio_propagation/: __init__.py  config_flow.py  const.py  coordinator_muf.py  coordinator_solar.py  dashboard_notify.py  diagnostics.py  icons.json  manifest.json  quality_scale.yaml  types.py  (+2 more)
dashboards/: README.md  amateur-radio-propagation.yaml  apexcharts-correlation-dashboard.yaml  auto-entities-maintenance-dashboard.yaml  browser-mod-dashboard.yaml  bubble-card-dashboard.yaml  button-card-status-matrix-dashboard.yaml  contest-field-day-dashboard.yaml  diagnostics-freshness-dashboard.yaml  layout-card-desktop-dashboard.yaml  lovelace-dashboards.example.yaml  mini-graph-trends-dashboard.yaml  mobile-minimal-dashboard.yaml  muf-station-dashboard.yaml  mushroom-operator-dashboard.yaml  operator-go-no-go-dashboard.yaml  space-weather-alert-center.yaml  state-switch-browser-mod-dashboard.yaml  vanilla-dashboard.yaml  vhf-6m-opening-dashboard.yaml
docs/: ARCHITECTURE.md  DASHBOARDS.md  SENSORS.md  TROUBLESHOOTING.md
scripts/: smoke_test.py
tests/: conftest.py  test_config_flow.py  test_dashboard_notify.py  test_diagnostics.py  test_init.py  test_metadata.py  test_muf_coordinator.py  test_sensor.py  test_solar_coordinator.py
(+11 files in other folders)
